--- a/index.html
+++ b/index.html
@@ -12,6 +12,90 @@
             <div class="card-list">
                 <div class="card">
                     <div class="card-image">
+                        <img src="CardSliderImg/images/development.jpg" alt="Desarrollo">
+                        <p class="card-tag">Desarrollo</p>
+                    </div>
+                    <div class="card-content">
+                        <h3 class="card-title">Mejores FrontEnd Frameworks</h3>
+                        <p class="card-text">Una comprensiva comparación de los FrontEnd Frameworks más populares y librerías que los programadores están utilizando para desarrollar aplicaciones web modernas.</p>
+                        <div class="card-footer">
+                            <div class="card-profile">
+                                <img src="CardSliderImg/images/user-2.jpg" alt="Valentina Perez">
+                                <div class="card-profile-info">
+                                    <span class="card-profile-name">Valentina Perez</span>
+                                    <span class="card-profile-role">Desarroladora</span>
+                                </div>
+                            </div>
+                            <a href="#" class="card-button">Leer más</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-image">
+                        <img src="CardSliderImg/images/design.jpg" alt="Design">
+                        <p class="card-tag">Diseño</p>
+                    </div>
+                    <div class="card-content">
+                        <h3 class="card-title">UI Trends Modernos para 2025</h3>
+                        <p class="card-text">Explora los nuevos tendencias y diseños de interfaz de usuarios qu están dando forma al panorama digital este año.</p>
+                        <div class="card-footer">
+                            <div class="card-profile">
+                                <img src="CardSliderImg/images/user-1.jpg" alt="Alex Quiroga">
+                                <div class="card-profile-info">
+                                    <span class="card-profile-name">Alex Quiroga</span>
+                                    <span class="card-profile-role">Diseñador UI</span>
+                                </div>
+                            </div>
+                            <a href="#" class="card-button">Leer más</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-image">
+                        <img src="CardSliderImg/images/development.jpg" alt="development">
+                        <p class="card-tag">Desarrollo</p>
+                    </div>
+                    <div class="card-content">
+                        <h3 class="card-title">Mejores FrontEnd Frameworks</h3>
+                        <p class="card-text">Una comprensiva comparación de los FrontEnd Frameworks más populares y librerías que los programadores están utilizando para desarrollar aplicaciones web modernas.</p>
+                        <div class="card-footer">
+                            <div class="card-profile">
+                                <img src="CardSliderImg/images/user-2.jpg" alt="Valentina Perez">
+                                <div class="card-profile-info">
+                                    <span class="card-profile-name">Valentina Perez</span>
+                                    <span class="card-profile-role">Desarroladora</span>
+                                </div>
+                            </div>
+                            <a href="#" class="card-button">Leer más</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-image">
+                        <img src="CardSliderImg/images/development.jpg" alt="development">
+                        <p class="card-tag">Desarrollo</p>
+                    </div>
+                    <div class="card-content">
+                        <h3 class="card-title">Mejores FrontEnd Frameworks</h3>
+                        <p class="card-text">Una comprensiva comparación de los FrontEnd Frameworks más populares y librerías que los programadores están utilizando para desarrollar aplicaciones web modernas.</p>
+                        <div class="card-footer">
+                            <div class="card-profile">
+                                <img src="CardSliderImg/images/user-2.jpg" alt="Valentina Perez">
+                                <div class="card-profile-info">
+                                    <span class="card-profile-name">Valentina Perez</span>
+                                    <span class="card-profile-role">Desarroladora</span>
+                                </div>
+                            </div>
+                            <a href="#" class="card-button">Leer más</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-image">
                         <img src="CardSliderImg/images/development.jpg" alt="development">
                         <p class="card-tag">Desarrollo</p>
                     </div>
